--- a/todo_frontend/package.json
+++ b/todo_frontend/package.json
@@ -1,15 +1,28 @@
 {
+  "type": "module",
   "name": "todo",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@hookform/resolvers": "^5.2.1",
+    "@radix-ui/react-label": "^2.1.7",
+    "@radix-ui/react-slot": "^1.2.3",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "better-auth": "^1.3.6",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "lucide-react": "^0.539.0",
     "netlify-cli": "^17.33.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "web-vitals": "^2.1.4"
+    "react-hook-form": "^7.62.0",
+    "react-router-dom": "^7.8.0",
+    "tailwind-merge": "^3.3.1",
+    "tailwindcss-animate": "^1.0.7",
+    "web-vitals": "^2.1.4",
+    "zod": "^4.0.17"
   },
   "scripts": {
     "dev": "vite",
